package by.training.task3.interpreter.base;

import by.training.task3.interpreter.Context;

public abstract class AbstractExpression {

    public abstract void interpret(Context context);

}
